Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/good/DataEncoder.java
package org.example.OCP.good;

public interface DataEncoder {
    public String encode(String data);
}
