Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/bad/InvalidDataFormatterException.java
package org.example.OCP.bad;

public class InvalidDataFormatterException extends Throwable {
}
